# unicorn

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  mypy.ini  prestart.sh  pyproject.toml  ruff.toml  run.sh  test_env.py
apps/api/app/: app_factory.py  main.py
apps/api/app/DI/: auth.py  board_member.py  current_user.py
apps/api/app/api/dal/: __init__.py  auth_repository.py  board_member_repository.py  board_repository.py  row_owner_repository.py  row_repository.py  table_repository.py
apps/api/app/common/: paging.py  position.py  repository.py  service.py
apps/api/app/core/: config.py  enums.py  logger.py  redis.py  security.py
apps/api/app/database_models/: __init__.py  board.py  board_member.py  common.py  note.py  notification.py  refresh_token.py  row.py  row_owner.py  table.py  user.py
apps/api/app/db/: base.py  database.py
apps/api/app/middleware/: metrics.py  tracing.py
apps/api/app/models/: user.py
apps/api/app/notification/: email_service.py  emitter.py  event_builder.py  notification_service.py  redis_client.py  schemas.py  worker.py
apps/api/app/repositories/: user_repo.py
apps/api/app/schemas/: user.py
apps/api/app/scripts/: backend_pre_start.py
apps/api/app/services/: auth_service.py
apps/api/app/utils/: auth_cookies.py  avatar.py
apps/api/db/: base.py  session.py
apps/api/db/migrations/: env.py
apps/api/logs/: 2025-06-02.log.2025-06-02  2025-06-04.log.2025-06-04  2025-07-08.log.2025-07-08  2025-07-09.log.2025-07-09  2025-09-11.log.2025-09-11  2025-09-19.log.2025-09-19  2025-09-19.log.2025-09-20  2025-09-19.log.2025-09-21  2025-09-22.log.2025-09-22  2025-09-23.log.2025-09-23  2025-09-23.log.2025-09-24  2025-09-26.log.2025-09-26  2025-10-08.log.2025-10-08  2025-10-08.log.2025-10-09
apps/api/openapi_specs/: openapi.yaml  openapi_row.yaml
apps/api/test/: test_health.py
apps/api/tests/: conftest.py  test_auth.py  test_board.py  test_health.py  test_notification.py  test_row.py  test_security.py  test_table.py  verify_email_notifications.py
apps/api/tests/utils/: register_and_login_user.py
(+200 files in other folders)
