[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ofer <ofergavri@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.29"
pydantic-settings = "^2.2"
structlog = "^24.1"
alembic = "^1.13"
python-multipart = "^0.0.20"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
black = "^24.4"
mypy = "^1.9"
pytest = "^8.1"
pytest-asyncio = "^0.23"
httpx = "^0.27"
psycopg2-binary = "^2.9.10"
sqlalchemy2-stubs = "^0.0.2a38"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMissingTypeStubs = false
