[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ofer <ofergavri@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.29"
pydantic-settings = "^2.2"
structlog = "^24.1"
alembic = "^1.13"
python-multipart = "^0.0.20"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pyjwt = "^2.10.1"
bcrypt = "<4.0"
email-validator = "^2.2.0"
psycopg2-binary = "^2.9"
tenacity = "^9.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
black = "^24.4"
mypy = "^1.9"
pytest = "^8.1"
pytest-asyncio = "^0.23"
httpx = "^0.27"
psycopg2-binary = "^2.9.10"
types-passlib = "^1.7.7.20250408"
aiosqlite = "^0.21.0"
rich = "^14.0.0"
python-dotenv = "^1.1.0"
types-pyyaml = "^6.0.12.20250516"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMissingTypeStubs = false

[tool.black]
line-length = 95
target-version = ["py312"]
skip-string-normalization = true
